--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Saucectl RUN
-        uses: saucelabs/saucectl-run-action@v1
+        uses: saucelabs/saucectl-run-action@v2.0.0-RC.1
         with:
           concurrency: 10
